# gst-eevideo

./: .gitignore  Cargo.toml  README.md
.cargo/: config.example.toml  config.toml  windows-runner.cmd  windows-runner.ps1
.github/workflows/: ci.yml
crates/eedeviced/: Cargo.toml
crates/eedeviced/src/: lib.rs  main.rs
crates/eedeviced/src/providers/: gstreamer.rs  mod.rs
crates/eefakedev/src/: lib.rs
crates/eevid/: Cargo.toml
crates/eevid/src/: lib.rs  main.rs
crates/eevideo-control/: Cargo.toml
crates/eevideo-control/src/: backend.rs  coap.rs  controller.rs  discovery.rs  lib.rs  register.rs  register_map.rs  yaml.rs
crates/eevideo-control/yaml/: EEVideo_Features.yaml
crates/eevideo-device/: Cargo.toml
crates/eevideo-device/src/: lib.rs
crates/eevideo-proto/: Cargo.toml
crates/eevideo-proto/src/: assembler.rs  compat_profile.rs  compat_stream.rs  lib.rs  pixel_format.rs  stats.rs
crates/eeview/: Cargo.toml
crates/eeview/src/: gui.rs  lib.rs  main.rs  session.rs
crates/eeview/tests/: gui_fake_device.rs  gui_session.rs
crates/gst-plugin-eevideo/: Cargo.toml
crates/gst-plugin-eevideo/src/: common.rs  control.rs  lib.rs
crates/gst-plugin-eevideo/src/eevideosink/: imp.rs  mod.rs
crates/gst-plugin-eevideo/src/eevideosrc/: imp.rs  mod.rs
crates/gst-plugin-eevideo/tests/: interoperability.rs  loopback.rs  loss_reorder_smoke.rs  managed_control.rs  multicast_loopback.rs  reject_format_change.rs  throughput_measurement.rs
crates/gst-plugin-eevideo/tests/support/: mod.rs
cross/jetson-orin/: Dockerfile  README.md  build.sh  prepare-sysroot.sh  test-ci-arm64-sources.sh  test-prepare-sysroot.sh
cross/jetson-orin/systemd/: eedeviced-launch.sh  eedeviced.env.example  eedeviced.service  test-eedeviced-launch.sh
docs/: README.md  async-metadata-layout-plan.md  compatibility-stream-profile.md  developer-guide.md  eedeviced-provider-guide.md  implementation-profile.md  interop-smoke.md  jetson-nano-jetpack4-first-time-setup.md  jetson-orin-device-bringup.md  jetson-orin-first-time-setup.md  non-jetson-device-first-time-setup.md  spec-enhancement-proposal.md
docs/superpowers/specs/: 2026-03-18-jetson-demo-video-design.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
graphify-out/memory/: query_20260521_013645_why_does_default_control_backend___connect_pipelin.md
graphify-out/obsidian/: .address().md  .applied().md  .as_str().md  .as_u16().md  .as_view().md  .backend().md  .bytes_per_pixel().md  .capabilities().md  .capture_config().md  .capture_configuration().md  .client_and_device().md  .clone().md  .config().md  .configure().md  .configure()_1.md  .configure()_2.md  .configure()_3.md  .configure_control().md  .configure_stream().md  .connect().md  .connect()_1.md  .connect()_2.md  .connect_endpoint().md  .constructed().md  .constructed()_1.md  .create().md  .current_format().md  .current_format()_1.md  .current_format()_2.md  .current_format()_3.md  .decode().md  .default().md  .default()_1.md  .default()_2.md  .default()_3.md  .default()_4.md  .default()_5.md  .default()_6.md  .default()_7.md  .default()_8.md  (+774 more)
graphify-out/obsidian/.obsidian/: graph.json
original_source_code/doc-main/doc-main/: .gitlab-ci.yml  README.md  antora-playbook.yml  package-lock.json
original_source_code/eevid-main/eevid-main/: .gitignore  .gitlab-ci.yml  .goreleaser.yaml  Dockerfile  LICENSE  README.md  eevid.yaml  go.mod  go.sum  main.go
original_source_code/eevid-main/eevid-main/cmd/: cap.go  disc.go  reg.go  root.go
original_source_code/eeview-main/eeview-main/: .gitignore  README.md  eevconfig.yaml  go.mod  go.sum  mac_main.go  main.go
original_source_code/eeview-main/eeview-main/cmd/: disc.go  root.go  viewer.go
original_source_code/eeview-main/eeview-main/gst/: gst.go
original_source_code/eevlark-main/eevlark-main/: .gitignore  .gitlab-ci.yml  .goreleaser.yaml  Dockerfile  LICENSE  README.md  eevlark.yaml  go.mod  go.sum  main.go
original_source_code/eevlark-main/eevlark-main/cmd/: root.go
original_source_code/eevlark-main/eevlark-main/cmd/builtins/: getState.go  initDevice.go  readI2C.go  readI2cAddr.go  readRegister.go  sleep.go  streamCapture.go  streamStart.go  streamStop.go  writeI2C.go  writeRegister.go
original_source_code/eevlark-main/eevlark-main/scripts/: i2c_rw.py  mipi_status.py  reg_rw.py  stream_capture.py  stream_start.py  stream_stop.py  test.py
original_source_code/goeevideo-main/goeevideo-main/: .gitignore  LICENSE  README.md  capFrame.go  capGVSP.go  capPxlFmt.go  captureImage.go  captureStructs.go  coap.go  discovery.go  eev.go  eevStructs.go  go.mod  go.sum  i2c.go  stream.go  udp.go  yamlFiles.go
original_source_code/spec-main/spec-main/: .gitignore  LICENSE  README.adoc  antora.yml
original_source_code/spec-main/spec-main/modules/ROOT/: nav.adoc
original_source_code/spec-main/spec-main/modules/ROOT/pages/: coap.adoc  discovery.adoc  features.adoc  intro.adoc  ipaddress.adoc  license.adoc  management.adoc  registers.adoc  stream.adoc
original_source_code/ui-master/ui-master/: .gitlab-ci.yml
original_source_code/ui-master/ui-master/src/css/: doc.css  vars.css
original_source_code/ui-master/ui-master/src/partials/: head-icons.hbs  header-content.hbs
