[workspace]
members = [
    "crates/eevideo-control",
    "crates/eevideo-device",
    "crates/eevideo-proto",
    "crates/eedeviced",
    "crates/eefakedev",
    "crates/gst-plugin-eevideo",
    "crates/eevid",
    "crates/eeview",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Matthew-Doe/eevideo"
rust-version = "1.78"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
glib = "0.20"
gstreamer = "0.23"
gstreamer-base = "0.23"
once_cell = "1.20"
socket2 = "0.5"
