[package]
name = "eedeviced"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Single-stream EEVideo device daemon for synthetic, V4L2, GStreamer, and Jetson-backed inputs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
eevideo-device = { path = "../eevideo-device" }
eevideo-proto = { path = "../eevideo-proto" }
gstreamer.workspace = true
gstreamer-app.workspace = true

[dev-dependencies]
eevideo-control = { path = "../eevideo-control" }
