[package]
name = "eevideo-control"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Control backend abstractions for the EEVideo Rust workspace"

[dependencies]
eevideo-proto = { path = "../eevideo-proto" }
if-addrs = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
socket2.workspace = true

[dev-dependencies]
tempfile = "3.23"
