[package]
name = "eevideo-device"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Reusable EEVideo device runtime for synthetic and hardware-backed daemons"

[dependencies]
anyhow.workspace = true
eevideo-control = { path = "../eevideo-control" }
eevideo-proto = { path = "../eevideo-proto" }
if-addrs = "0.13"
socket2.workspace = true
